// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction group queries fetches metrics top traces 1`] = `
Array [
  Object {
    "apm": Object {
      "events": Array [
        "metric",
      ],
    },
    "body": Object {
      "aggs": Object {
        "transaction_groups": Object {
          "aggs": Object {
            "transaction_type": Object {
              "top_metrics": Object {
                "metrics": Array [
                  Object {
                    "field": "transaction.type",
                  },
                ],
                "sort": Object {
                  "@timestamp": "desc",
                },
              },
            },
          },
          "composite": Object {
            "size": 10000,
            "sources": Array [
              Object {
                "service.name": Object {
                  "terms": Object {
                    "field": "service.name",
                  },
                },
              },
              Object {
                "transaction.name": Object {
                  "terms": Object {
                    "field": "transaction.name",
                  },
                },
              },
            ],
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "exists": Object {
                "field": "transaction.duration.histogram",
              },
            },
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
            Object {
              "term": Object {
                "transaction.root": true,
              },
            },
          ],
          "must_not": Array [],
        },
      },
      "size": 0,
    },
  },
  Object {
    "apm": Object {
      "events": Array [
        "metric",
      ],
    },
    "body": Object {
      "aggs": Object {
        "transaction_groups": Object {
          "aggs": Object {
            "avg": Object {
              "avg": Object {
                "field": "transaction.duration.histogram",
              },
            },
          },
          "composite": Object {
            "size": 10000,
            "sources": Array [
              Object {
                "service.name": Object {
                  "terms": Object {
                    "field": "service.name",
                  },
                },
              },
              Object {
                "transaction.name": Object {
                  "terms": Object {
                    "field": "transaction.name",
                  },
                },
              },
            ],
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "exists": Object {
                "field": "transaction.duration.histogram",
              },
            },
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
            Object {
              "term": Object {
                "transaction.root": true,
              },
            },
          ],
          "must_not": Array [],
        },
      },
      "size": 0,
    },
  },
  Object {
    "apm": Object {
      "events": Array [
        "metric",
      ],
    },
    "body": Object {
      "aggs": Object {
        "transaction_groups": Object {
          "aggs": Object {
            "sum": Object {
              "sum": Object {
                "field": "transaction.duration.histogram",
              },
            },
          },
          "composite": Object {
            "size": 10000,
            "sources": Array [
              Object {
                "service.name": Object {
                  "terms": Object {
                    "field": "service.name",
                  },
                },
              },
              Object {
                "transaction.name": Object {
                  "terms": Object {
                    "field": "transaction.name",
                  },
                },
              },
            ],
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "exists": Object {
                "field": "transaction.duration.histogram",
              },
            },
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
            Object {
              "term": Object {
                "transaction.root": true,
              },
            },
          ],
          "must_not": Array [],
        },
      },
      "size": 0,
    },
  },
]
`;

exports[`transaction group queries fetches top traces 1`] = `
Array [
  Object {
    "apm": Object {
      "events": Array [
        "transaction",
      ],
    },
    "body": Object {
      "aggs": Object {
        "transaction_groups": Object {
          "aggs": Object {
            "transaction_type": Object {
              "top_metrics": Object {
                "metrics": Array [
                  Object {
                    "field": "transaction.type",
                  },
                ],
                "sort": Object {
                  "@timestamp": "desc",
                },
              },
            },
          },
          "composite": Object {
            "size": 10000,
            "sources": Array [
              Object {
                "service.name": Object {
                  "terms": Object {
                    "field": "service.name",
                  },
                },
              },
              Object {
                "transaction.name": Object {
                  "terms": Object {
                    "field": "transaction.name",
                  },
                },
              },
            ],
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
          ],
          "must_not": Array [
            Object {
              "exists": Object {
                "field": "parent.id",
              },
            },
          ],
        },
      },
      "size": 0,
    },
  },
  Object {
    "apm": Object {
      "events": Array [
        "transaction",
      ],
    },
    "body": Object {
      "aggs": Object {
        "transaction_groups": Object {
          "aggs": Object {
            "avg": Object {
              "avg": Object {
                "field": "transaction.duration.us",
              },
            },
          },
          "composite": Object {
            "size": 10000,
            "sources": Array [
              Object {
                "service.name": Object {
                  "terms": Object {
                    "field": "service.name",
                  },
                },
              },
              Object {
                "transaction.name": Object {
                  "terms": Object {
                    "field": "transaction.name",
                  },
                },
              },
            ],
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
          ],
          "must_not": Array [
            Object {
              "exists": Object {
                "field": "parent.id",
              },
            },
          ],
        },
      },
      "size": 0,
    },
  },
  Object {
    "apm": Object {
      "events": Array [
        "transaction",
      ],
    },
    "body": Object {
      "aggs": Object {
        "transaction_groups": Object {
          "aggs": Object {
            "sum": Object {
              "sum": Object {
                "field": "transaction.duration.us",
              },
            },
          },
          "composite": Object {
            "size": 10000,
            "sources": Array [
              Object {
                "service.name": Object {
                  "terms": Object {
                    "field": "service.name",
                  },
                },
              },
              Object {
                "transaction.name": Object {
                  "terms": Object {
                    "field": "transaction.name",
                  },
                },
              },
            ],
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 0,
                  "lte": 50000,
                },
              },
            },
          ],
          "must_not": Array [
            Object {
              "exists": Object {
                "field": "parent.id",
              },
            },
          ],
        },
      },
      "size": 0,
    },
  },
]
`;
